--- a/style.css
+++ b/style.css
@@ -3,3 +3,84 @@
     box-sizing: border-box;
     font-family: 'Press Start 2P', cursive;
 }
+
+#main {
+    position: relative;
+    display: inline-block;
+}
+
+#healthBarTimer {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 20px;
+}
+
+.fighterParent1 {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    border-top: 4px solid white;
+    border-left: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+.fighterParent2 {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    border-top: 4px solid white;
+    border-right: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+.fighterChild {
+    background-color: transparent;
+    height: 30px;
+    width: 100%;
+}
+
+#playerHealth {
+    position: absolute;
+    background: linear-gradient(to right, #28b487 0%, #7dd56f 100%);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+#enemyHealth {
+    position: absolute;
+    background: linear-gradient(to right, #28b487 0%, #7dd56f 100%);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+#timer {
+    background-color: black;
+    width: 100px;
+    height: 50px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: 4px solid white;
+}
+
+#displayText {
+    position: absolute;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+}
